articleBody/force-app/main/default/objects/Article_Body_Setting__mdt/Article_Body_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Article Body Setting</label>
    <pluralLabel>Article Body Settings</pluralLabel>
</CustomObject>