articleBody/force-app/main/default/objects/Article_Body_Setting__mdt/fields/Article_API_Name_Whitelist__c.field-meta.xml
<CustomField>
    <fullName>Article_API_Name_Whitelist__c</fullName>
    <description>Knowledge Article object API Name. Example: Knowledge__kav, FAQ__kav, namespace__Article__kav</description>
    <inlineHelpText>Knowledge Article object API Name. Example: Knowledge__kav, FAQ__kav, namespace__Article__kav</inlineHelpText>
    <label>Article API Name Whitelist</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>