articleBody/force-app/main/default/objects/Article_Body_Setting__mdt/fields/Article_Body_Field_API_Name_Whitelist__c.field-meta.xml
<CustomField>
    <fullName>Article_Body_Field_API_Name_Whitelist__c</fullName>
    <description>Knowledge Article object&apos;s Body / Content field API Name. Example: Body__c, namespace__Content__c</description>
    <inlineHelpText>Knowledge Article object&apos;s Body / Content field API Name. Example: Body__c, namespace__Content__c</inlineHelpText>
    <label>Article Body Field API Name Whitelist</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>