articleBody/force-app/main/default/objects/Article_Body_Setting__mdt/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <label>Identifier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>